# HuMobi

./: .gitignore  LICENSE  README.md  SC_humobchallenge.py  SC_markov.py  SC_pred_humobchall_RF.py  SC_pred_humobchall_markov.py  SC_pred_markovian_RF.py  SC_pred_markovian_SC.py  SC_pred_markovian_markov.py  data_aggregation.py  data_preprocessing.py  data_statistics.py  generate_docs.bat  markovian.csv  paper2_r2_andothercorrs.py  prediction_test.py  profile_stats  setup.cfg  smbco.py  sparsechaintest.py
demo/: aggregated_sample.csv  brightkite_sample.tsv  converted_sample.csv  data_aggregation.py  data_metrics.py  data_prediction_generation.py  data_preprocessing.py  data_reading.py  mark.csv  mobility_model.py  preprocessed_stops_sample.csv
html/humobi/: index.html
html/humobi/measures/: collective.html  index.html  individual.html
html/humobi/misc/: create_grid.html  generators.html  index.html  utils.html
html/humobi/predictors/: deep.html  index.html  markov.html  sparse.html  wrapper.html
measures/: collective.py  individual.py
misc/: create_grid.py  generators.py  utils.py
models/mobility_model/: data_generating.py  data_sampling.py  who.py
models/spatial_modules/: where.py
models/spatial_tools/: distributions.py  generating.py  misc.py
models/temporal_tools/: when.py
predictors/: deep.py  markov.py  wrapper.py
preprocessing/: filters.py  spatial_aggregation.py  temporal_aggregation.py
sparse_experiments/: MI_decay.py  TF_bad.py  human.py  humanNP_GRU.py  humanNP_MC.py  humanNP_RF.py  humanNP_RF_horizon.py  humanNP_sparse.py  humanNTB_MC.py  human_NTB.py  markovian_GRU.py  markovian_RF.py  markovian_RF_horizon.py  markovian_generate.py  markovian_mc.py  markovian_sparse.py  markovian_sparse_final.py  markovian_sparse_searchsize.py  markovian_toploc.py  nonstationary_MC.py  nonstationary_generate.py  nonstationary_searchsize.py  profile_stats  random_MC.py  random_generate.py  random_sprase_searchsize.py  rioNP_MC.py  rioNP_RF.py  rioNP_sparse.py  rioNP_sparse_val.py  rioNTB_MC.py  rioNTB_RF.py  rioNTB_sparse.py  rioNTB_sparse_val.py
src/HuMobi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/humobi/: __init__.py  main.py  sparse_experiment.py
structures/: trajectory.py
tests/: test_module_mobiliti_models.py
tools/: processing.py  user_statistics.py
(+110 files in other folders)
