[metadata]
name = HuMobi
version = 0.1.1
author = Kamil Smolak
author_email = kamil.smolak@upwr.edu.pl
description = A library dedicated to human mobility data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SmolakK/HuMobi
project_urls =
    Bug Tracker = https://github.com/SmolakK/HuMobi/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
pandas;
geopandas;
tqdm;
scipy;
numpy;
scikit-learn;
Biopython;
shapely;
numba;
tensorflow-gpu;
geofeather

[options.packages.find]
where = src
