[metadata]
name = HuMobi
version = 0.1.14
author = Kamil Smolak
author_email = kamil.smolak@upwr.edu.pl
description = A library dedicated to human mobility data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SmolakK/HuMobi
project_urls =
    Bug Tracker = https://github.com/SmolakK/HuMobi/issues
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pandas >=1.1.5
    geopandas >=0.8.1
    tqdm >=4.59.0
    scipy >=1.5.2
    numpy >=0.19.5
    scikit-learn >=0.23.2
    biopython >=1.78
    shapely >=1.7.1
    numba >= 0.51.2
    tensorflow >=2.4.1
    geofeather >=0.3.0

[options.packages.find]
where = src
